# consumer_propagator

./: makefile  pyproject.toml  readme.md  test_task_python.md
consumer/: consumer.py  consumer_config.py  models.py
propagator/: propagator.py  propagator_config.py
propagator/evens/: evens.json
