[tool.poetry]
name = "event_system"
version = "0.1.0"
description = "Event Propagator and Consumer"
authors = ["Viktoras Pranckietis <viktoraspr@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.8.0"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
